# python-project-lvl1

./: .gitignore  Makefile  README.md  pyproject.toml  ruff.toml
brain_games/: __init__.py  cli.py  types.py
brain_games/games/: __init__.py  arithmetic_progression.py  calculator.py  gcd.py  is_digit_even.py  is_digit_prime.py
brain_games/scripts/: __init__.py  arithmetic_progression.py  calculator.py  gcd.py  is_digit_even.py  is_digit_prime.py  main.py
