[project]
name = "hexlet-code"
version = "0.1.0"
authors = [
    {name = "Mary-Ku", email="maryku4815@gmail.com"}
]
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "prompt>=0.4.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["brain_games"]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "ruff>=0.14.13",
]

[project.scripts]
brain-games = "brain_games.scripts.main:main"
brain-even = "brain_games.scripts.is_digit_even:main"
brain-calc = "brain_games.scripts.calculator:main"
brain-gcd = "brain_games.scripts.gcd:main"
brain-progression = "brain_games.scripts.arithmetic_progression:main"
brain-prime = "brain_games.scripts.is_digit_prime:main"
